# agent

./: .env.example  .gitignore  Cargo.toml  README.md  tools.md
.github/workflows/: ci.yml
src/: agent.rs  commands.rs  errors.rs  main.rs  mode.rs  settings.rs
src/llm/: client.rs  mod.rs  types.rs
src/tools/: env.rs  file.rs  grep.rs  http.rs  mod.rs  search.rs  shell.rs
src/ui/: chat.rs  chrome.rs  input.rs  mod.rs  overlay.rs  sidebar.rs  suggestions.rs  theme.rs
