[package]
name = "godmode"
version = "0.1.0"
edition = "2021"
description = "Terminal AI agent with local tools and Gemini function calling"
license = "MIT"
readme = "README.md"
keywords = ["agent", "terminal", "tui", "gemini", "ai"]
categories = ["command-line-utilities"]
repository = "https://github.com/samujal/godmode"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
toml = "0.8"
dirs = "6.0"
thiserror = "2"
ratatui = "0.29"
crossterm = "0.28"
walkdir = "2"
glob = "0.3"

[lints.rust]
warnings = "warn"

[lints.clippy]
all = "warn"